# SatCompress

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
results/: baselines.csv
scripts/: ablation.py  aws_setup.sh  aws_train.sh  download_s2_tiles.py  download_sentinel.py  plot_rd.py  rd_sweep.py  run_baselines.py  train_s2.sh
serving/: api.py  app.py
src/satcompress/: __init__.py  losses.py  metrics.py  train.py
src/satcompress/baselines/: __init__.py  classical.py
src/satcompress/data/: __init__.py  sentinel.py
src/satcompress/models/: __init__.py  autoencoder.py  complex_ae.py
src/satcompress/quant/: __init__.py  entropy.py  polarquant.py  ste.py
tests/: test_baselines.py  test_extensions.py  test_polarquant.py  test_s2_pipeline.py
