[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "satcompress"
version = "0.1.0"
description = "Neural satellite-image compression with PolarQuant latent quantization"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Jenil Kathrotia" }]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
